complete basic function. Complete script structure. Complete refactor model.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
 
   <body>
+    <!-- Title, Timer/Tomato -->
 <div class="row">
 
 
@@ -23,29 +24,35 @@ Pomodoro Timer
 
 <div class="justify-content-center timer-div">
   <img id="Pomo" class="col-12" src="images/pomo.png" />
-    <p id="timer">
-      <span id="minutes">25</span> : <span id="seconds">00</span>
+    <p id="Timer">
+      <span id="Minutes">25</span> : <span id="Seconds">00</span>
     </span>
 </div>
+
 </div>
+
+<!-- Buttons -->
 <div class="row">
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <button id="start" class = "my-btn">Start</button>
+
+  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    <button id="Start-pause" class = "my-btn">Start</button>
   </div>
 
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <button id="pause" class = "my-btn">Pause</btton>
+  <!-- <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+    <button id="Pause" class = "my-btn">Pause</btton>
+  </div> -->
+
+  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    <button id="Reset" class = "my-btn">Reset</btton>
   </div>
 
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <button id="break" class = "my-btn">Break</button>
+  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    <button id="Toggle" class = "my-btn">Break</button>
   </div>
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <button id="reset" class = "my-btn">Reset</btton>
-  </div>
+
 </div>
 
-
+<!-- Footer -->
     <div id="Footer" class="row">
       <p>
         Marzipan Devs <br />
@@ -55,6 +62,7 @@ Pomodoro Timer
       <div>Icons made by <a href="" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
 
+<!-- Script Links index and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src = "index.js"></script>
 
