--- a/index.html
+++ b/index.html
@@ -4,32 +4,27 @@
     <meta charset="utf-8">
     <title>Pomodoro Timer</title>
     <!--Bootstrap, Custom CSS-->
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href = "style.css" />
-    <!-- Fonts: -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href = "style.css" >
+    <!-- Fonts: -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <!-- Title, Timer/Tomato -->
-<div class="row">
+    <div class="row">
+    <p id="Title">Pomodoro Timer</p>
 
+    <div class="justify-content-center timer-div">
+      <img id="Pomo" class="col-12" src="images/pomo.png"/>
+        <div id="Timer">
+          <p id="Minutes">25</p><p>:</p><p id="Seconds">00</p>
+        </div>
+    </div>
 
-<p id="Title">
-Pomodoro Timer
-</p>
-
-<div class="justify-content-center timer-div">
-  <img id="Pomo" class="col-12" src="images/pomo.png" />
-    <p id="Timer">
-      <span id="Minutes">25</span> : <span id="Seconds">00</span>
-    </span>
-</div>
-
-</div>
+    </div>
 
 <!-- Buttons -->
 <div class="row">
@@ -37,30 +32,21 @@ Pomodoro Timer
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
     <button id="Start-pause" class = "my-btn">Start</button>
   </div>
-  
+
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
-    <button id="Reset" class = "my-btn">Reset</btton>
+    <button id="Reset" class = "my-btn">Reset</button>
   </div>
 
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
-    <button id="Toggle" class = "my-btn"> Break</button>
+    <button id="Toggle" class = "my-btn">Break</button>
   </div>
 
 </div>
 
 <!-- Footer -->
-    <div id="Footer" class="row">
-      <p>
-        Marzipan Devs <br />
-        2021
-
-      </p>
-      <div>Icons made by <a href="" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-    </div>
-
+  
 <!-- Script Links index and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src = "index.js"></script>
-
   </body>
 </html>
